--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css">
-    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css"> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css">
     <script src="%PUBLIC_URL%/js/jquery-3.2.1.js" charset="utf-8"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js" charset="utf-8"></script>
     <title>React App</title>
