--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
     -->
     <!-- bootstrap -->
     <!-- <link rel="stylesheet" href="https://bootswatch.com/3/yeti/bootstrap.css"> -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css"> -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/index.css">
-    <script src="%PUBLIC_URL%/js/jquery-3.2.1.js" charset="utf-8"></script>
-    <script src="%PUBLIC_URL%/js/bootstrap.min.js" charset="utf-8"></script>
+    <!-- <script src="%PUBLIC_URL%/js/jquery-3.2.1.js" charset="utf-8"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js" charset="utf-8"></script> -->
     <title>React App</title>
   </head>
   <body>
