--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.2.1/react-transition-group.min.js"></script>
    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-popper/0.7.4/react-popper.min.js"></script>
    <!-- Reactstrap -->
-   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script>
+   <!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script> -->
+   <script type="text/javascript" src="../node_modules/reactstrap/dist/reactstrap.min.js"></script>
 
     <title>React App</title>
   </head>
