--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <!-- font Raleway -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    
     <!-- sass -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
