adding google analytic

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,18 @@
 
     <!-- font Helvetica -->
     <link href="https://fonts.googleapis.com/css?family=Helvetica" rel="stylesheet">
-    
+
     <!-- sass -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84868350-1"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+
+   gtag('config', 'UA-84868350-1');
+  </script>
 
     <!-- Required dependencies -->
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.0/prop-types.min.js"></script>
@@ -40,7 +49,7 @@
 
     <title>Box Aladin</title>
   </head>
-  <body> 
+  <body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
