--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,17 @@
     <!-- sass -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84868350-1"></script>
   <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+    if (document.location.hostname.indexOf("www.boxaladin.com")) {
+      /* Global site tag (gtag.js) - Google Analytics */
+         /* Production Google Analytics Code */
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
 
-   gtag('config', 'UA-84868350-1');
-  </script> -->
+         gtag('config', 'UA-84868350-1');
+    }
+  </script>
 
     <!-- Required dependencies -->
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.0/prop-types.min.js"></script>
