Forgot 1 line for GAnalytics script

--- a/public/index.html
+++ b/public/index.html
@@ -27,28 +27,28 @@
 
     <!-- sass -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84868350-1"></script>
+    <script>
+      if (document.location.hostname.indexOf("www.boxaladin.com")) {
+        /* Global site tag (gtag.js) - Google Analytics */
+          /* Production Google Analytics Code */
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-  <script>
-    if (document.location.hostname.indexOf("www.boxaladin.com")) {
-      /* Global site tag (gtag.js) - Google Analytics */
-         /* Production Google Analytics Code */
-         window.dataLayer = window.dataLayer || [];
-         function gtag(){dataLayer.push(arguments);}
-         gtag('js', new Date());
+          gtag('config', 'UA-84868350-1');
+      }
+    </script>
 
-         gtag('config', 'UA-84868350-1');
-    }
-  </script>
-
-    <!-- Required dependencies -->
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.0/prop-types.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.production.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.production.min.js"></script>
-  <!-- Optional dependencies -->
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.2.1/react-transition-group.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-popper/0.7.4/react-popper.min.js"></script>
-  <!-- Reactstrap -->
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script>
+      <!-- Required dependencies -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.0/prop-types.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.production.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.production.min.js"></script>
+    <!-- Optional dependencies -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.2.1/react-transition-group.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-popper/0.7.4/react-popper.min.js"></script>
+    <!-- Reactstrap -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script>
 
     <title>Box Aladin</title>
   </head>
