Trying to fix analytics again

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84868350-1"></script>
     <script>
-      if (document.location.hostname.indexOf("www.boxaladin.com")) {
+      if (document.location.hostname.indexOf("www.boxaladin.com") !== -1) {
         /* Global site tag (gtag.js) - Google Analytics */
           /* Production Google Analytics Code */
           window.dataLayer = window.dataLayer || [];
