--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,19 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/reactstrap/5.0.0-alpha.3/reactstrap.min.js"></script>
 
     <title>Box Aladin</title>
+    <!-- Hotjar Tracking Code for www.boxaladin.com -->
+    <script>
+      if (document.location.hostname.indexOf("www.boxaladin.com") !== -1) {
+        (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:927428,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
