--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+
     <!-- font Helvetica -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
@@ -54,7 +54,7 @@
 
     <title>Box Aladin</title>
     <!-- Hotjar Tracking Code for www.boxaladin.com -->
-    <script>
+    <!-- <script>
       if (document.location.hostname.indexOf("www.boxaladin.com") !== -1) {
         (function(h,o,t,j,a,r){
           h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -65,7 +65,7 @@
           a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
